# gct-hm-inventory

./: .gitignore
inventory-backend/: .env  Cargo.toml  package.json  tsconfig.json
inventory-backend/.cargo/: config.toml
inventory-backend/crates/libs/lib-auth/: Cargo.toml
inventory-backend/crates/libs/lib-auth/src/: config.rs
inventory-backend/crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
inventory-backend/crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
inventory-backend/crates/libs/lib-core/: Cargo.toml
inventory-backend/crates/libs/lib-core/src/: config.rs  lib.rs
inventory-backend/crates/libs/lib-core/src/ctx/: error.rs  mod.rs
inventory-backend/crates/libs/lib-core/src/models/: error.rs  mod.rs
inventory-backend/crates/libs/lib-core/src/models/store/: mod.rs
inventory-backend/crates/libs/lib-core/src/models/store/dbx/: error.rs  mod.rs
inventory-backend/crates/libs/lib-core/src/models/types/: users.rs
inventory-backend/crates/libs/lib-utils/: Cargo.toml
inventory-backend/crates/libs/lib-utils/src/: b32.rs  b58.rs  b64.rs  envs.rs  lib.rs  time.rs
inventory-backend/crates/services/web-server/: Cargo.toml
inventory-backend/crates/tools/gen-key/: Cargo.toml
inventory-backend/crates/tools/gen-key/src/: main.rs
inventory-backend/migrations/: table_schema.sql
inventory-backend/migrations/tables/: refresh.table.sql
inventory-backend/public/: index.html
inventory-backend/src/: app.ts
inventory-backend/src/utils/: config.util.ts  executeQuery.util.ts  mysql.util.ts  verifyToken.util.ts
(+35 files in other folders)
