[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow" # For experimental dev.]

[workspace]
resolver = "2"
members = [
  "crates/libs/lib-auth",
  "crates/libs/lib-core",
  "crates/libs/lib-utils", "crates/services/web-server", "crates/tools/gen-key",
]

[workspace.dependencies]
# -- Serde
serde_with = {version = "3", features = ["time_0_3"] }
# -- Data
modql = { version = "0.4.0-rc", features = ["with-sea-query"]}
# -- Others
derive_more = { version = "1.0.0-beta", features = ["from", "display"] }
