[package]
name = "lib-utils"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
base32 = "0.5"
base58 = "0.2"
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }
data-encoding = "2" # base64, base64url, base32hex
